# aumos-sdks

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml  governance.yml
benchmarks/: README.md  compare.py
benchmarks/go/: bench_test.go
benchmarks/python/: bench.py
benchmarks/rust/: Cargo.toml
benchmarks/rust/benches/: governance.rs
benchmarks/typescript/: bench.ts
docs/: PACKAGE_GUIDE.md
scripts/: fire-line-audit.sh
