[package]
name = "aumos-benchmarks"
version = "0.1.0"
edition = "2021"
description = "AumOS cross-language governance benchmark suite — Rust implementation"
license = "BSL-1.1"
authors = ["MuVeraAI Corporation"]
publish = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "governance"
harness = false
